en/assets/css/style.css
/* ... */
@media screen and (max-width: 768px) {
  section.index .mb {
    display: block !important;
  }
}
section.index .bg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  -o-object-fit: cover;
     object-fit: cover;
  -o-object-position: 85%;
     object-position: 85%;
}
@media (max-width: 768px) {
  section.index .bg {
    -o-object-position: center 35%;
       object-position: center 35%;
  }
}
@media (max-width: 450px) {
  section.index .bg {
    -o-object-position: center 100%;
       object-position: center 100%;
  }
}
section.index .bottom {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: -1;
}
section.index .dec {
  position: absolute;
  width: 50%;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}
section.index .container {
  width: 100%;
  max-width: unset;
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  align-items: center
  gap: 40px;
  text-align: left;
}
@media (max-width: 768px) {
  section.index .container {
    align-items: flex-start;
  }
}
section.index .container > div {
  width: 50%;
  margin-left: auto;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}
@media (max-width: 768px) {
  section.index .container > div {
    width: 100%;
    margin-left: 0;
    align-items: flex-start;
  }
}
section.index .logo {
  width: 50%;
}
section.index .hero-title-1 {
  width: 100%;
  margin-top: 50px;
  /* margin-left: -3%; */
}
@media (max-width: 768px) {
  section.index .hero-title-1 {
    margin-top: 50px;
    margin-left: 0;
    width: 100%;
    /* margin-left: -5%; */
  }
}
section.index .hero-title-hr {
  margin-top: 50px;
  width: 100%;
}
section.index .hero-title-2 {
  width: 90%;
  margin-top: 23px;
}
@media (max-width: 768px) {
  section.index .hero-title-2 {
    margin-top: 10%;
    width: 110%;
    margin-left: -5%;
  }
}
@media (max-width: 405px) {
  section.index .hero-title-2 {
    margin-top: 4%;
  }
}
section.index .hero-title-3 {
  width: 83%;
  margin-top: 50px;
}
@media (max-width: 768px) {
  section.index .hero-title-3 {
    width: 100%;
  }
}
section.index .hero-title-4 {
  width: 80%;
  margin-top: 36px;
}

section.foreword {
  background: #0C1531;
  padding: 150px 30px 100px;
  position: relative;
  overflow: visible;
  z-index: auto;
}
@media (max-width: 991px) {
  section.foreword {
    padding: 50px 30px;
  }
}
@media (max-width: 991px) {
  section.foreword .anchor {
    top: -50px;
  }
}
section.foreword h2 {
  letter-spacing: 0;
}
section.foreword .container {
  max-width: 1200px;
}
section.foreword .foreword-bg-dec {
  position: absolute;
  z-index: -2;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}
section.foreword .item {
  padding: 60px 82px 60px;
  text-align: center;
  border: 1px solid rgba(255, 255, 255, 0.5);
  border-radius: 50px;
  background-color: rgba(217, 217, 217, 0.1215686275);
  margin-top: 40px;
  position: relative;
  z-index: 1;
}
@media (max-width: 991px) {
  section.foreword .item {
    padding: 37px 26px 50px;
  }
}
section.foreword .item h3 {
  font-size: 28px;
  line-height: 1.3;
  font-weight: 700;
  color: #fff;
}
@media (max-width: 991px) {
  section.foreword .item h3 {
    font-size: 16px;
  }
}
section.foreword .item .line {
  display: block;
  margin: 30px auto;
  background: #39A0D2;
  height: 2px;
  width: 80%;
}
@media (max-width: 991px) {
  section.foreword .item .line {
    height: 5px;
    margin: 25px auto;
  }
}
section.foreword .item p {
  font-size: 20px;
  font-weight: 500;
  line-height: 29px;
  color: #fff;
}
@media (max-width: 991px) {
  section.foreword .item p {
    font-size: 15px;
  }
}
section.foreword .item p strong {
  color: #0C1531;
  line-height: 27px;
}

section.highlights {
  background: #0C1531;
  padding: 150px 30px 100px;
  position: relative;
  overflow: visible;
  z-index: 3;
}
@media (max-width: 991px) {
  section.highlights {
    padding: 50px 30px;
    margin-top: -1px;
  }
}
@media (max-width: 991px) {
  section.highlights .anchor {
    top: -10px;
  }
}
section.highlights h2 span {
  font-family: "Electrolize", sans-serif;
  font-size: 64px;
  color: #d8be81;
}
@media (max-width: 991px) {
  section.highlights h2 span {
    font-size: 40px;
  }
}
section.highlights .bg {
  position: absolute;
  bottom: -150px;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
  min-width: 1252px;
}
section.highlights .container {
  width: 100%;
  max-width: 1200px;
}
section.highlights .highlights-grid {
  margin-top: 95px;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 63px;
}
@media (max-width: 991px) {
  section.highlights .highlights-grid {
    grid-template-columns: 1fr;
    gap: 50px;
    margin-top: 35px;
  }
}
section.highlights .highlight-card {
  background: rgb(22 7 40);
  border: 1px solid #ffffff;
  border-radius: 12px;
  padding: 50px 24px 65px;
  position: relative;
}
@media (max-width: 991px) {
  section.highlights .highlight-card {
    padding: 40px 35px 78px;
  }
}
section.highlights .highlight-card .card-label {
  display: inline-block;
  border-radius: 4px;
  padding: 4px 10px;
  font-size: 32px;
  position: absolute;
  top: -20px;
  left: 26px;
  font-weight: 500;
  color: #39A0D2;
  background-color: #032027;
  margin-bottom: 20px;
  letter-spacing: 0.05em;
}
@media (max-width: 991px) {
  section.highlights .highlight-card .card-label {
    font-size: 24px;
    top: -16px;
  }
}
section.highlights .highlight-card h3 {
  font-size: 24px;
  font-weight: 700;
  color: #fff;
  line-height: 45px;
  text-align: left;
}
@media (max-width: 991px) {
  section.highlights .highlight-card h3 {
    font-size: 20px;
  }
}
section.highlights .highlight-card p {
  margin-top: 18px;
  font-size: 20px;
  color: rgb(255, 255, 255);
  line-height: 28px;
  text-align: left;
}
section.highlights .highlight-card .num {
  font-family: "Electrolize", sans-serif;
  position: absolute;
  bottom: -40px;
  right: 25px;
  height: 114px;
}
/* ... */

